@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2021, Oracle and/or its affiliates. All rights reserved.
  * 
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
@@ -44,7 +44,7 @@ import org.objectweb.asm.MethodVisitor;
 import org.objectweb.asm.Opcodes;
 import org.objectweb.asm.Type;
 import org.openjdk.jmc.agent.Agent;
-import org.openjdk.jmc.agent.jfr.impl.JFRUtils;
+import org.openjdk.jmc.agent.jfrlegacy.impl.JFRUtils;
 
 /**
  * Helper methods for doing transforms.
@@ -55,14 +55,17 @@ public final class TypeUtils {
 	 * The internal name of this class.
 	 */
 	public static final String INAME = Type.getInternalName(TypeUtils.class);
-	public static final Type OBJECT_TYPE = Type.getObjectType("java/lang/Object"); //$NON-NLS-1$
-	public static final Type OBJECT_ARRAY_TYPE = Type.getObjectType("[Ljava/lang/Object;"); //$NON-NLS-1$
-	public static final Type STRING_TYPE = Type.getType("Ljava/lang/String;"); //$NON-NLS-1$
 
-	public static final Object STRING_INTERNAL_NAME = "java/lang/String"; //$NON-NLS-1$
+	public static final Type TYPE_OBJECT = Type.getObjectType("java/lang/Object"); //$NON-NLS-1$
+	public static final Type TYPE_OBJECT_ARRAY = Type.getObjectType("[Ljava/lang/Object;"); //$NON-NLS-1$
+	public static final Type TYPE_STRING = Type.getType("Ljava/lang/String;"); //$NON-NLS-1$
 
-	private final static String UNSAFE_JDK_7_CLASS = "sun.misc.Unsafe"; //$NON-NLS-1$
-	private final static String UNSAFE_JDK_11_CLASS = "jdk.internal.misc.Unsafe"; //$NON-NLS-1$
+	public static final String INTERNAL_NAME_STRING = "java/lang/String"; //$NON-NLS-1$
+	public static final String INTERNAL_NAME_THREAD = Type.getInternalName(Thread.class);
+	public static final String INTERNAL_NAME_CLASS = Type.getInternalName(Class.class);
+
+	private static final String UNSAFE_JDK_7_CLASS = "sun.misc.Unsafe"; //$NON-NLS-1$
+	private static final String UNSAFE_JDK_11_CLASS = "jdk.internal.misc.Unsafe"; //$NON-NLS-1$
 
 	private static final Object UNSAFE;
 	private static final Method UNSAFE_DEFINE_CLASS_METHOD;
@@ -120,14 +123,13 @@ public final class TypeUtils {
 	}
 
 	public static Class<?> defineClass(
-			String eventClassName, byte[] eventClass, int i, int length, ClassLoader definingClassLoader,
-			ProtectionDomain protectionDomain) {
+		String eventClassName, byte[] eventClass, int i, int length, ClassLoader definingClassLoader,
+		ProtectionDomain protectionDomain) {
 		try {
-			return (Class<?>) UNSAFE_DEFINE_CLASS_METHOD
-					.invoke(UNSAFE, eventClassName, eventClass, i, length, definingClassLoader, protectionDomain);
+			return (Class<?>) UNSAFE_DEFINE_CLASS_METHOD.invoke(UNSAFE, eventClassName, eventClass, i, length,
+					definingClassLoader, protectionDomain);
 		} catch (IllegalAccessException | IllegalArgumentException | InvocationTargetException e) {
-			Agent.getLogger()
-					.log(Level.SEVERE, "Failed to dynamically define the class " + eventClassName, e); //$NON-NLS-1$
+			Agent.getLogger().log(Level.SEVERE, "Failed to dynamically define the class " + eventClassName, e); //$NON-NLS-1$
 		}
 		return null;
 	}
@@ -218,17 +220,11 @@ public final class TypeUtils {
 				"(Ljava/lang/Object;)Ljava/lang/String;", false); //$NON-NLS-1$
 	}
 
-	public static boolean shouldStringify(Type argumentType) {
-		if (argumentType.getSort() == Type.ARRAY || argumentType.getSort() == Type.OBJECT) {
-			return !argumentType.getInternalName().equals(STRING_INTERNAL_NAME);
-		}
-		return false;
-	}
-
 	/**
 	 * Transforms a FQN in internal form, so that it can be used in e.g. formal descriptors.
 	 *
-	 * @param className the fully qualified class name in internal form.
+	 * @param className
+	 *            the fully qualified class name in internal form.
 	 * @return the transformed class name.
 	 */
 	public static String parameterize(String className) {
@@ -236,11 +232,11 @@ public final class TypeUtils {
 	}
 
 	/**
-	 * Converts a canonical class name into the internal form (binary name).
+	 * Converts a canonical class name into the internal form (binary name). eg.
+	 * <code>com.company.project</code> converts into <code>com/company/project</code>
 	 * 
-	 * eg. <code>com.company.project</code> converts into <code>com/company/project</code>
-	 * 
-	 * @param className the canonical class name
+	 * @param className
+	 *            the canonical class name
 	 * @return the internal form
 	 */
 	public static String getInternalName(String className) {
@@ -248,11 +244,11 @@ public final class TypeUtils {
 	}
 
 	/**
-	 * Converts a internal class name (binary name) into the canonical form.
-	 *
-	 * ie. <code>com/company/project</code> converts into <code>com.company.project</code> 
+	 * Converts a internal class name (binary name) into the canonical form. ie.
+	 * <code>com/company/project</code> converts into <code>com.company.project</code>
 	 * 
-	 * @param binaryName the internal class name
+	 * @param binaryName
+	 *            the internal class name
 	 * @return in canonical form
 	 */
 	public static String getCanonicalName(String binaryName) {
@@ -260,10 +256,11 @@ public final class TypeUtils {
 	}
 
 	/**
-	 * Returns the constant loading instruction that pushes a zero value of the given type onto the operand stack. A 
-	 * null reference is pushed if the given type is an object or an array.
+	 * Returns the constant loading instruction that pushes a zero value of the given type onto the
+	 * operand stack. A null reference is pushed if the given type is an object or an array.
 	 * 
-	 * @param type the type of the operand
+	 * @param type
+	 *            the type of the operand
 	 * @return the instruction
 	 */
 	public static int getConstZeroOpcode(Type type) {
@@ -292,11 +289,12 @@ public final class TypeUtils {
 	}
 
 	/**
-	 * Returns a array element for ASM's <code>MethodVisitor.visitFrame()</code> method used for frame verification of 
-	 * a given type.
+	 * Returns a array element for ASM's <code>MethodVisitor.visitFrame()</code> method used for
+	 * frame verification of a given type.
 	 * 
-	 * @param type the type of the element on the operand stack or in the local variable table
-	 * @return a array element for <code>MethodVisitor.visitFrame()</code>'s parameter
+	 * @param type
+	 *            the type of the element on the operand stack or in the local variable table.
+	 * @return a array element for <code>MethodVisitor.visitFrame()</code>'s parameter.
 	 */
 	public static Object getFrameVerificationType(Type type) {
 		switch (type.getSort()) {
@@ -321,6 +319,21 @@ public final class TypeUtils {
 		default:
 			throw new AssertionError();
 		}
+	}
+
+	/**
+	 * Returns true if the type provided is supported for a JFR event field.
+	 * 
+	 * @param type
+	 *            the type to check.
+	 * @return true if the type provided is supported for a JFR event field.
+	 */
+	public static boolean isSupportedType(Type type) {
+		if (INTERNAL_NAME_THREAD.equals(type.getInternalName()) || INTERNAL_NAME_CLASS.equals(type.getInternalName())
+				|| INTERNAL_NAME_STRING.equals(type.getInternalName())) {
+			return true;
+		}
+		return type.getSort() != Type.OBJECT && type.getSort() != Type.ARRAY;
 	}
 
 	/**
